# emergex_cameron_kolisko

./: .gitignore  CITATION.cff  LICENSE  README.md  exampleOptimizationScript.ipynb  pyproject.toml  script2Pickel.pkl
emergex/: README.md  __init__.py
emergex/behaviors/: __init__.py  behavior.py  manager.py
emergex/core/: __init__.py  crnData.py  simulate.py  timeCourse.py
emergex/crn/: __init__.py  crnConstructor.py
emergex/experiments/: __init__.py  experiment.py  experimentCompiler.py  manager.py
emergex/optimization/: __init__.py  optimize.py  parameters.py
emergex/results/: __init__.py  optimizerResults.py
emergex/utils/: __init__.py  base.py  constants.py  helpers.py
emergex/visualization/: __init__.py  observeBehaviors.py  observeExperiments.py  observeParameters.py
emergex/visualization/plotting/: __init__.py  elements.py  iterations.py
examples/crnDemonstration/: smallCRN.py
examples/optimizeBehaviors/: loadSmallCRN.py  oscillate.py  smallCRN.py
